# face-register-systerm-huaweicloud

./: .gitignore  README.md  debug-mobile-register-html.md
.dbg/: mobile-register-html.env  trae-debug-log-mobile-register-html.ndjson
backend/: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: router.py
backend/app/api/routes/: attendance.py  auth.py  events.py  health.py  users.py
backend/app/core/: config.py  datetime_utils.py  security.py
backend/app/db/: bootstrap.py  session.py
backend/app/models/: __init__.py  attendance.py  attendance_event.py  face_embedding.py  user.py
backend/app/schemas/: attendance.py  auth.py  common.py  event.py  user.py
backend/app/services/: recognition.py  storage.py
docs/: task1-design.md
mobile/: .env.example  README.md  index.html  package-lock.json  package.json
mobile/src/: App.css  App.tsx
