[project]
name = "cloud-proj-backend"
version = "0.1.0"
description = "Backend service for the cloud face attendance project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt==5.0.0",
    "esdk-obs-python==3.24.6",
    "fastapi==0.115.0",
    "insightface==0.7.3",
    "numpy==2.1.1",
    "opencv-python-headless==4.10.0.84",
    "onnxruntime==1.24.1",
    "pydantic-settings==2.5.2",
    "PyJWT==2.9.0",
    "pymysql==1.1.1",
    "python-multipart==0.0.9",
    "sqlalchemy==2.0.35",
    "uvicorn[standard]==0.30.6",
]

[project.optional-dependencies]
dev = []

[tool.uv]
package = false
environments = ["sys_platform == 'linux'"]
